MODBULKOPS-514 Fixed sonar